Replace Patreon with custom page

--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,3 +1,2 @@
 github: [Phoenix616]
-patreon: Phoenix616
-custom: https://minebench.de/spende
+custom: ["https://tip.phoenix616.dev", "https://minebench.de/spende"]
