--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,14 @@
 blank_issues_enabled: false
 contact_links:
-  - name: "#moep IRC channel on irc.spi.gt"
-    url: "https://kiwiirc.com/client/irc.spi.gt/#moep"
+  - name: "#general IRC channel on irc.phoenix616.dev"
+    url: "https://kiwiirc.com/client/irc.phoenix616.dev/#general"
     about: Phoenix616's public IRC channel to discuss any of his projects
+  - name: "Phoenix616's Discord"
+    url: "https://phoenix616.dev/discord"
+    about: The discord server for all of Phoenix616's stuff. Bridged to IRC.
   - name: SpigotMC PM
     url: https://www.spigotmc.org/conversations/add?to=Phoenix616&title=Question
     about: Ask Phoenix616 questions privately
   - name: Minebench.de Discord
     url: https://minebench.de/discord
-    about: If you can speak German then feel free to join our Discord!
+    about: If you can speak German then feel free to join the Minebench.de Discord!
