--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,3 @@
 github: [Phoenix616]
-custom: ["https://tip.phoenix616.dev", "https://minebench.de/spende"]
+custom: ["https://tip.phoenix616.dev", "https://minebench.de/supporter"]
+issuehunt: Minebench
